<resources>


    <string name="app_name"> Wayfinding</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">Bienvenue sur Wayfinding</string>
    <string name="desc_slide1">Votre avenir commence ici</string>
    <string name="title_slide2"> Faites le bon choix</string>
    <string name="desc_slide2">Examinez parmi des millions de choix </string>
    <string name="title_slide3">Vous êtes au bon endroit</string>
    <string name="desc_slide3"> Alors Connectez Vous et Creez Votre Futur</string>

    <string name="profile">Profil</string>
    <string name="preference">Preference</string>
    <string name="configuration">Configuration</string>
    <string name="invit">Inviter des amis</string>
    <string name="about">A propos</string>
    <string name="seting">Paramètres</string>
    <string name="profil">Profil</string>
    <string name="invite">Invite des amis</string>
    <string name="diconnect">Deconnection</string>
    <string name="home">Home</string>
    <string name="school_list">Ecoles</string>
    <string name="search">Recherche</string>
    <string name="menu_compte">Compte</string>
    <string name="menu_formation">Formation</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->s
    <string name="text_sort">Trier par</string>
    <string name="menu_annonce">Annonces</string>
    <string name="top_school">Meilleurs écoles</string>
    <string name="top_formation">Meuiileurs tdomaine</string>
    <string name="top_annonce">Annoces recentes</string>
    <string name="more">Plus</string>
    <string name="invitation"> ajouter des amis</string>
    <string name="test_text"> Passer un test</string>
    <string name="open">Open</string>
    <string name="Close"> Close</string>
    <string name="moin">Moin</string>
    <string name="title_detail_formation">Detail tdomaine</string>

    <string-array name="spiner_search">
        <item>Formation</item>
        <item>Ecole</item>
        <item>Annonce</item>
    </string-array>

    <string-array name="spiner_formation">
        <item>Nom : A-Z</item>
        <item>Nom : Z-A</item>
        <item>Note : du plus grand au plus petit</item>
        <item>Note : du plus petit au plus grand</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="formations_presentation_title">Formations</string>
    <string name="add">Ajouter</string>
    <string name="added">Ajoutée</string>
    <string name="wyFind">Que recherchez vous ?</string>
    <string name="selectCriter">Selectionner un critère de recherche !</string>
    <string name="title_activity_school_maps">Map</string>
    <string name="map">MAP</string>
    <string name="conn_msg">Votre plateforme d\'aide à l\'orientation universitaire et professionnelle</string>
    <string name="email_hint">Votre adresse email</string>
    <string name="password_hint">Votre mot de passe</string>
    <string name="new_logo">logo</string>
    <string name="logo">logo 1</string>
    <string name="legal">Copyright TIPAM 2019, Tous droit réservés</string>
    <string name="btn_connect">se connecter</string>
    <string name="mot_de_passe_oublie">Mot de passe oublié ?</string>
    <string name="creer_compte">Créer un compte</string>
</resources>
