<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_home"
        android:icon="@drawable/ic_home_icons_plan_icons_plan_icons_plan"
        android:title="@string/home" />
    <item
        android:id="@+id/menu_item_school"
        android:icon="@drawable/ic_annuaire_icons_plan_icons_plan"
        android:title="@string/school_list" />
    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_search_icons_plan_icons_plan"
        android:title="@string/search" />
    <item
        android:id="@+id/menu_item_account"
        android:icon="@drawable/ic_formations_icons_plan_icons_plan"
        android:title="@string/menu_compte" />
    <item
        android:id="@+id/menu_item_formation"
        android:icon="@drawable/ic_formations_icons_plan_icons_plan"
        android:title="@string/menu_formation" />
</menu>